<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Signal Info</string>
    <string name="combine">%1$s\n%2$s</string>

    <string name="about">About</string>
    <string name="airplane_off">Airplane mode off</string>
    <string name="airplane_on">Airplane mode on</string>
    <string name="all_codes">All codes</string>
    <string name="auto">Auto</string>
    <string name="backup">Backup</string>
    <string name="cancel">Cancel</string>
    <string name="carrier_details">Carrier: %1$s, %2$s</string>
    <string name="cellular_off">Cell off</string>
    <string name="cellular_on">Cell on</string>
    <string name="close">Close</string>
    <string name="code">Code</string>
    <string name="code_dialer">&#42;&#35;&#42;&#35;%1$s&#35;&#42;&#35;&#42;</string>
    <string name="code_instructions">Unlike regular secret codes, Google Fi\'s can\'t be executed directly. Upon selecting an option, the Dialer will show-up and you\'ll have to paste the code that was automatically copied into the clipboard.</string>
    <string name="count">Count</string>
    <string name="connected_carrier">Connected to a carrier</string>
    <string name="connected_sprint">Connected to Sprint</string>
    <string name="connected_t_mobile">Connected to T-Mobile</string>
    <string name="connected_three">Connected to Three UK/AT</string>
    <string name="connected_us_cellular">Connected to US Cellular</string>
    <string name="connected_wifi">Connected to Wi-Fi</string>
    <string name="connected_wifi_carrier">Connected to Wi-Fi and a carrier</string>
    <string name="connected_wifi_sprint">Connected to Wi-Fi and Sprint</string>
    <string name="connected_wifi_t_mobile">Connected to Wi-Fi and T-Mobile</string>
    <string name="connected_wifi_three">Connected to Wi-Fi and Three UK/AT</string>
    <string name="connected_wifi_us_cellular">Connected to Wi-Fi and US Cellular</string>
    <string name="connection_status">Connection status</string>
    <string name="connection_status_description">Display the current connection status</string>
    <string name="database_delete_error">Failed to clear database</string>
    <string name="database_delete_success">Database cleared successfully</string>
    <string name="database_restore_error">Failed to restore database</string>
    <string name="database_restore_success">Database restored successfully</string>
    <string name="database_save_success">Database saved successfully</string>
    <string name="database_save_error">Failed to save database</string>
    <string name="details">Details</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete all events</string>
    <string name="disconnected">Disconnected</string>
    <string name="dont_show">Don\'t show this again</string>
    <string name="events">Events</string>
    <string name="foreground_service">Foreground service</string>
    <string name="foreground_service_on">Turn on to enable all the features</string>
    <string name="google_fi">Google Fi</string>
    <string name="help">Help</string>
    <string name="icons_legend">Icons legend</string>
    <string name="info">Info</string>
    <string name="location_permission_on">Location permission: granted</string>
    <string name="location_permission_off">Location permission: required</string>
    <string name="location_service_on">Location service: enabled</string>
    <string name="location_service_off">Location service: required</string>
    <string name="multi_sim">Multi SIM</string>
    <string name="next">Next</string>
    <string name="no_browser">Can\'t open any browser</string>
    <string name="ok">Ok</string>
    <string name="phone_off">Phone off</string>
    <string name="phone_on">Phone on</string>
    <string name="permission_required">Phone permission is required for the app to function</string>
    <string name="permission_required_settings">Phone permission is required for the app to function. Please change in settings.</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="repair">Repair</string>
    <string name="report">Report</string>
    <string name="restore">Restore</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="sign_in">Sign In</string>
    <string name="speed">%1$s</string>
    <string name="speed_operator">%1$s, operated by %2$s</string>
    <string name="sprint">Sprint</string>
    <string name="sprint_2">Sprint (2)</string>
    <string name="stats">Stats</string>
    <string name="start_boot">Start on boot</string>
    <string name="sure">Are you sure?</string>
    <string name="t_mobile">T-Mobile</string>
    <string name="three_at">Three AT</string>
    <string name="three_uk">Three UK</string>
    <string name="type">Type</string>
    <string name="unknown">Unknown</string>
    <string name="us_cellular">US Cellular</string>
    <string name="us_cellular_2">US Cellular (2)</string>
    <string name="version">v%1$s</string>
    <string name="waiting">Waiting on connectivity change&#8230;</string>
    <string name="welcome">Complete overhaul to comply with new Android versions. Head over to the settings and active the foreground service to capture all the cellular and Wi-Fi changes.</string>
    <string name="whats_new">What\'s new</string>
    <string name="wifi">%1$s, %2$s</string>
    <string name="wifi_details">Wi-Fi: %1$s</string>
    <string name="wifi_ssid">Wi-Fi SSID</string>
    <string name="wifi_ssid_on">Both need to be enabled to get the SSID</string>
    <string name="wifi_off">Wi-Fi off</string>
    <string name="wifi_on">Wi-Fi on</string>
</resources>