<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_default">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/service_title"
            style="@style/Settings.Title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/foreground_service" />
        <TextView
            android:id="@+id/service_subtitle"
            style="@style/Settings.Subtitle"
            app:layout_constraintTop_toBottomOf="@id/service_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/service_toggle"
            android:layout_marginEnd="@dimen/size_20"
            android:text="@string/foreground_service_on" />
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/service_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/service_title"
            app:layout_constraintEnd_toEndOf="parent" />
        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/service_boot_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/service_subtitle"
            app:layout_constraintEnd_toEndOf="parent" />
        <TextView
            android:id="@+id/service_boot"
            style="@style/Settings.Action"
            app:layout_constraintTop_toTopOf="@id/service_boot_check"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/service_boot_check"
            android:text="@string/start_boot" />

        <TextView
            android:id="@+id/wifi_title"
            style="@style/Settings.Title"
            android:layout_marginTop="@dimen/size_20"
            app:layout_constraintTop_toBottomOf="@id/service_boot_check"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/wifi_ssid" />
        <TextView
            android:id="@+id/wifi_subtitle"
            style="@style/Settings.Subtitle"
            app:layout_constraintTop_toBottomOf="@id/wifi_title"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="@dimen/size_10"
            android:text="@string/wifi_ssid_on" />
        <TextView
            android:id="@+id/wifi_permission"
            style="@style/Settings.Action"
            app:layout_constraintTop_toBottomOf="@id/wifi_subtitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
        <TextView
            android:id="@+id/wifi_location"
            style="@style/Settings.Action"
            app:layout_constraintTop_toBottomOf="@id/wifi_permission"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/fi_title"
            style="@style/Settings.Title"
            android:layout_marginTop="@dimen/size_20"
            app:layout_constraintTop_toBottomOf="@id/wifi_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/google_fi" />
        <TextView
            android:id="@+id/fi_all"
            style="@style/Settings.Subtitle"
            app:layout_constraintTop_toBottomOf="@id/fi_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/all_codes" />

        <TextView
            android:id="@+id/backup_title"
            style="@style/Settings.Title"
            android:layout_marginTop="@dimen/size_20"
            app:layout_constraintTop_toBottomOf="@id/fi_all"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/backup" />
        <TextView
            android:id="@+id/backup_save"
            style="@style/Settings.Action"
            app:layout_constraintTop_toBottomOf="@id/backup_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/save" />
        <TextView
            android:id="@+id/backup_restore"
            style="@style/Settings.Action"
            app:layout_constraintTop_toBottomOf="@id/backup_save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/restore" />

        <TextView
            android:id="@+id/events_title"
            style="@style/Settings.Title"
            android:layout_marginTop="@dimen/size_20"
            app:layout_constraintTop_toBottomOf="@id/backup_restore"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/events" />
        <TextView
            android:id="@+id/events_delete"
            style="@style/Settings.Action"
            app:layout_constraintTop_toBottomOf="@id/events_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/delete" />
        <TextView
            android:id="@+id/events_stats"
            style="@style/Settings.Action"
            app:layout_constraintTop_toBottomOf="@id/events_delete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/stats" />
        <TextView
            android:id="@+id/events_icons"
            style="@style/Settings.Action"
            app:layout_constraintTop_toBottomOf="@id/events_stats"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/icons_legend" />

        <TextView
            android:id="@+id/about_title"
            style="@style/Settings.Title"
            android:layout_marginTop="@dimen/size_20"
            app:layout_constraintTop_toBottomOf="@id/events_icons"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/about" />
        <TextView
            android:id="@+id/about_version"
            style="@style/Settings.Action"
            app:layout_constraintTop_toBottomOf="@id/about_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
        <TextView
            android:id="@+id/about_help"
            style="@style/Settings.Action"
            app:layout_constraintTop_toBottomOf="@id/about_version"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/help" />
        <TextView
            android:id="@+id/about_privacy"
            style="@style/Settings.Action"
            app:layout_constraintTop_toBottomOf="@id/about_help"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/privacy_policy" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"
            android:indeterminate="true" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>