<?xml version="1.0" encoding="utf-8"?>
<!-- necessary to be full screen and respect the constraints -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/spacing_default"
        android:paddingStart="@dimen/spacing_default"
        android:paddingEnd="@dimen/spacing_default">

        <TextView
            android:id="@+id/count"
            android:layout_width="@dimen/size_50"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/count"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/type"
            android:layout_width="@dimen/size_50"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_10"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/count"
            android:text="@string/type"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/type"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/details"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/stats"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/size_10"
            app:layout_constraintTop_toBottomOf="@id/count"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:indeterminate="true" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>
